--- a/index.html
+++ b/index.html
@@ -10,54 +10,112 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
-      background: #f9f9f9;
-    }
-
-    .card {
-      font-size: 2rem;
+      background: #f0f4f8;
       padding: 2rem;
-      border: 3px solid #333;
-      border-radius: 1rem;
+    }
+
+    .instructions {
+      font-size: 1.1rem;
       margin-bottom: 1rem;
-      width: 300px;
+      color: #333;
       text-align: center;
-      cursor: pointer;
-      background-color: white;
-    }
-
-    .controls {
-      display: flex;
-      gap: 1rem;
-    }
-
-    button {
-      padding: 1rem 2rem;
-      font-size: 1rem;
     }
 
     .settings {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     select {
       font-size: 1rem;
       padding: 0.5rem;
     }
+
+    .card-container {
+      width: 250px;
+      height: 330px;
+      perspective: 1000px;
+      margin-bottom: 1.5rem;
+    }
+
+    .card {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 0.6s;
+      cursor: pointer;
+    }
+
+    .card.flipped {
+      transform: rotateY(180deg);
+    }
+
+    .card-face {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid #ccc;
+      border-radius: 20px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      font-size: 2rem;
+      background-color: white;
+    }
+
+    .card-front {
+      z-index: 2;
+    }
+
+    .card-back {
+      transform: rotateY(180deg);
+    }
+
+    .controls {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    button {
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      border-radius: 10px;
+      border: none;
+      background-color: #0077cc;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
   </style>
 </head>
 <body>
+
+  <p class="instructions">
+    👇 Click the card to flip it. Use the buttons to go forward or back.<br>
+    Choose a specific table or select "Random" for variety.
+  </p>
 
   <div class="settings">
     <label for="table">Choose table:</label>
     <select id="table">
       <option value="random">Random</option>
-      <!-- Dynamically add 1–12 below -->
     </select>
   </div>
 
-  <div class="card" id="flashcard">Click to reveal</div>
+  <div class="card-container">
+    <div class="card" id="flashcard">
+      <div class="card-face card-front" id="card-front">7 × 9</div>
+      <div class="card-face card-back" id="card-back">63</div>
+    </div>
+  </div>
 
   <div class="controls">
     <button onclick="prevCard()">Previous</button>
@@ -65,15 +123,16 @@
   </div>
 
   <script>
-    const flashcard = document.getElementById('flashcard');
     const tableSelector = document.getElementById('table');
+    const card = document.getElementById('flashcard');
+    const front = document.getElementById('card-front');
+    const back = document.getElementById('card-back');
 
     let cards = [];
     let currentIndex = 0;
-    let showingAnswer = false;
 
-    // Populate select with 1–12
-    for (let i = 1; i <= 12; i++) {
+    // Populate dropdown from 1 to 20
+    for (let i = 1; i <= 20; i++) {
       const opt = document.createElement('option');
       opt.value = i;
       opt.text = i;
@@ -87,21 +146,21 @@
       cards = [];
 
       if (selected === 'random') {
-        for (let i = 1; i <= 12; i++) {
-          for (let j = 1; j <= 12; j++) {
+        for (let i = 1; i <= 20; i++) {
+          for (let j = 1; j <= 20; j++) {
             cards.push({ q: `${i} × ${j}`, a: i * j });
           }
         }
       } else {
         const base = parseInt(selected);
-        for (let i = 1; i <= 12; i++) {
+        for (let i = 1; i <= 20; i++) {
           cards.push({ q: `${base} × ${i}`, a: base * i });
         }
       }
 
       shuffle(cards);
       currentIndex = 0;
-      showingAnswer = false;
+      resetFlip();
       showCard();
     }
 
@@ -115,24 +174,28 @@
     function showCard() {
       if (!cards.length) return;
       const current = cards[currentIndex];
-      flashcard.textContent = showingAnswer ? `${current.q} = ${current.a}` : current.q;
+      front.textContent = current.q;
+      back.textContent = current.a;
     }
 
-    flashcard.addEventListener('click', () => {
-      showingAnswer = !showingAnswer;
-      showCard();
+    card.addEventListener('click', () => {
+      card.classList.toggle('flipped');
     });
 
     function nextCard() {
       currentIndex = (currentIndex + 1) % cards.length;
-      showingAnswer = false;
+      resetFlip();
       showCard();
     }
 
     function prevCard() {
       currentIndex = (currentIndex - 1 + cards.length) % cards.length;
-      showingAnswer = false;
+      resetFlip();
       showCard();
+    }
+
+    function resetFlip() {
+      card.classList.remove('flipped');
     }
 
     // Start with random
