--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     let cards = [];
     let currentIndex = 0;
-    let maxTable = 12;
+    let maxTable = parseInt(maxSelector.value);
 
     // Populate table dropdown (1–20)
     for (let i = 1; i <= 20; i++) {
@@ -166,7 +166,7 @@
       cards = [];
 
       if (selected === 'random') {
-        for (let i = 1; i <= 20; i++) {
+        for (let i = 1; i <= maxTable; i++) {
           for (let j = 1; j <= maxTable; j++) {
             cards.push({ q: `${i} × ${j}`, a: i * j });
           }
@@ -218,7 +218,7 @@
       card.classList.remove('flipped');
     }
 
-    // Init with random × 12
+    // Init on load
     generateCards();
   </script>
 
